feat: artifact phase 1